improved layout, styles working w/ required label color updates

--- a/client/src/app/forms/wrappers/form-field/form-field.wrapper.html
+++ b/client/src/app/forms/wrappers/form-field/form-field.wrapper.html
@@ -1,124 +1,33 @@
 <!-- <pre>Error State: {{ errorState | json }}</pre> -->
-<ng-container [ngSwitch]="formLayout">
-  <div
-    *ngSwitchCase="'horizontal'"
-    class="layout-horizontal">
-    <ng-container
-      *ngTemplateOutlet="horizontalFieldWrapper;
-      context: { $implicit: {
+<nz-form-item
+  [ngClass]="{
+      bordered: props.showBorder,
       disabled: props.disabled,
       error: showError,
       required: props.required,
-      valid: field.formControl!.status === 'VALID' }}"></ng-container>
-  </div>
-  <div
-    *ngSwitchCase="'inline'"
-    class="layout-inline">
-    <ng-container *ngTemplateOutlet="inlineFieldWrapper"></ng-container>
-  </div>
-  <div
-    *ngSwitchCase="'vertical'"
-    class="layout-vertical">
-    <ng-container *ngTemplateOutlet="verticalFieldWrapper"></ng-container>
-  </div>
-</ng-container>
-
-<ng-template
-  #horizontalFieldWrapper
-  let-ngclass>
-  <nz-form-item
-    [nzGutter]="wrapper.layout.item.gutter"
-    class="layout-horizontal"
-    [ngClass]="ngclass">
-    <ng-container *ngIf="props.label && props.hideLabel !== true">
-      <nz-form-label
-        *ngrxLet="wrapper.layout.label as label"
-        [nzRequired]="props.required"
-        [nzFor]="id"
-        [nzNoColon]="true"
-        [nzTooltipTitle]="props.tooltip"
-        [nzSpan]="label.span ? label.span : null">
-        <span
-          nz-typography
-          nzEllipsis
-          [nzContent]="props.label"></span>
-      </nz-form-label>
-    </ng-container>
-    <nz-form-control
-      *ngrxLet="wrapper.layout.control as control"
-      [nzExtra]="wrapper.showExtra && !showError ? descriptionTpl : undefined"
-      [nzValidateStatus]="errorState"
-      [nzErrorTip]="errorTpl"
-      [nzSpan]="props.hideLabel ? 24 : control.span ? control.span : null">
-      <ng-container #fieldComponent></ng-container>
-    </nz-form-control>
-  </nz-form-item>
-</ng-template>
-
-<ng-template
-  #verticalFieldWrapper
-  let-ngclass>
-  <nz-form-item
-    class="layout-vertical"
-    [ngClass]="ngclass">
-    <ng-container *ngIf="props.label && props.hideLabel !== true">
-      <nz-form-label
-        *ngrxLet="wrapper.layout.label as label"
-        [ngClass]="{ disabled: props.disabled, error: showError }"
-        [nzRequired]="props.required"
-        [nzFor]="id"
-        [nzTooltipTitle]="props.tooltip"
-        [nzNoColon]="true">
-        <span
-          class="label"
-          nz-typography
-          nzEllipsis
-          [nzContent]="props.label"></span>
-      </nz-form-label>
-    </ng-container>
-    <nz-form-control
-      *ngrxLet="wrapper.layout.control as control"
-      [nzExtra]="wrapper.showExtra && !showError ? descriptionTpl : undefined"
-      [nzValidateStatus]="errorState"
-      [nzErrorTip]="errorTpl">
-      <ng-container #fieldComponent></ng-container>
-    </nz-form-control>
-  </nz-form-item>
-</ng-template>
-
-<ng-template
-  #inlineFieldWrapper
-  let-ngclass>
-  <nz-form-item
-    class="layout-inline"
-    [ngClass]="ngclass">
-    <ng-container *ngIf="props.label && props.hideLabel !== true">
-      <nz-form-label
-        [nzRequired]="props.required"
-        [nzTooltipTitle]="props.tooltip"
-        [nzFor]="id"
-        [nzNoColon]="true">
-        <span
-          class="label"
-          nz-typography
-          nzEllipsis
-          [nzContent]="props.label"></span>
-      </nz-form-label>
-    </ng-container>
-    <nz-form-control
-      *ngrxLet="wrapper.layout.control as control"
-      [nzExtra]="wrapper.showExtra && !showError ? descriptionTpl : undefined"
-      [nzValidateStatus]="errorState"
-      [nzErrorTip]="errorTpl">
-      <ng-container #fieldComponent></ng-container>
-      <ng-template
-        #errorTpl
-        let-control>
-        <formly-validation-message [field]="field"></formly-validation-message>
-      </ng-template>
-    </nz-form-control>
-  </nz-form-item>
-</ng-template>
+      valid: field.formControl!.status === 'VALID',
+      }">
+  <ng-container *ngIf="props.label && props.hideLabel !== true">
+    <nz-form-label
+      [ngClass]="{ disabled: props.disabled, error: showError }"
+      [nzRequired]="props.required"
+      [nzFor]="id"
+      [nzTooltipTitle]="props.tooltip"
+      [nzNoColon]="true">
+      <span
+        class="label"
+        nz-typography
+        nzEllipsis
+        [nzContent]="props.label"></span>
+    </nz-form-label>
+  </ng-container>
+  <nz-form-control
+    [nzExtra]="wrapper.showExtra && !showError ? descriptionTpl : undefined"
+    [nzValidateStatus]="errorState"
+    [nzErrorTip]="errorTpl">
+    <ng-container #fieldComponent></ng-container>
+  </nz-form-control>
+</nz-form-item>
 
 <!-- SHARED COMPONENT TEMPLATES -->
 <!-- displays the field value description -->
