--- a/client/src/app/forms/types/molecular-profile-select/mp-finder/mp-finder.component.html
+++ b/client/src/app/forms/types/molecular-profile-select/mp-finder/mp-finder.component.html
@@ -1,7 +1,7 @@
 <form
   nz-form
-  [nzLayout]="layout"
-  [formGroup]="form">
+  [formGroup]="form"
+  [nzLayout]="finderState.formLayout">
   <formly-form
     [form]="form"
     [fields]="config"
