--- a/client/src/app/forms/wrappers/form-field/form-field.wrapper.less
+++ b/client/src/app/forms/wrappers/form-field/form-field.wrapper.less
@@ -1,118 +1,190 @@
 @import 'themes/default.less';
 
-// nz-form-item.layout-vertical[_ngcontent-ng-c3802630593]     nz-form-label:first-of-type label.ant-form-item-required:before
+@default-border: 1px solid @blue-1;
+@default-bg-color: @blue-1;
+@default-label-color: @blue-10;
 
-:host-context(form[nzlayout='vertical']) {
-  nz-form-item:first-of-type {
-    flex-wrap: nowrap;
-    flex-direction: column;
-  }
-}
+@disabled-border: 1px solid @grey-4;
+@disabled-bg-color: @grey-2;
+@diabled-label-color: @text-color-secondary;
 
-:host-context(form[nzlayout='horizontal']) {
-  nz-form-item:first-of-type {
-    flex-direction: inherit;
-    nz-form-label {
-      text-align: right;
-      line-height: 28px;
-      white-space: inherit;
-      padding: inherit;
+@required-border: 1px solid @blue-4;
+@required-bg-color: @blue-2;
+@required-label-color: @blue-7;
+
+@item-border-radius: 4px;
+@item-padding: 4px 8px;
+@item-border: @default-border;
+@item-background-color: @default-bg-color;
+
+//
+// STATUS COLORS
+//
+//body > app-root > div.app-container > cvc-layout > nz-layout > nz-layout > nz-content > app-assertions > cvc-assertion-add > nz-page-header > nz-page-header-content > div > cvc-assertion-submit > cvc-assertion-submit-form > cvc-form-submission-status-display > nz-spin > div > form > formly-form > formly-field > formly-group > formly-field > cvc-form-layout-wrapper > nz-row > nz-col > formly-group > formly-field:nth-child(2) > cvc-form-card > nz-card > div.ant-card-body > nz-row > nz-col.ant-col.ant-col-16.ng-star-inserted > formly-field > cvc-form-field-wrapper > nz-form-item > nz-form-label > label
+:host {
+  > nz-form-item {
+    border-radius: @item-border-radius;
+    padding: @item-padding;
+    // defaults
+    > nz-form-label {
+      span.label {
+        color: @default-label-color;
+      }
     }
-  }
-}
-
-:host-context(form[nzlayout='inline']) {
-  nz-form-item:first-of-type {
-    flex-direction: inherit;
-    nz-form-label {
-      height: 28px;
-      line-height: 28px;
-      white-space: inherit;
-      padding: inherit;
-    }
-  }
-}
-
-.cvc-field-label() {
-  label {
-    // embolden required labels
-    &.ant-form-item-required {
-      font-weight: 500;
-
-      &:before {
-        border: 1px solid @required-color;
-        height: 1em;
-        content: '';
+    // required status
+    &.required {
+      > nz-form-label {
+        ::ng-deep label {
+          &:before {
+            border: 1px solid @required-label-color;
+            height: 1em;
+            content: '';
+          }
+          span.label {
+            color: @required-label-color;
+            font-weight: 600;
+          }
+        }
       }
     }
   }
+}
 
-  ::ng-deep span.label {
-    padding-right: 4px;
+// vertical layout adjustments
+:host(.layout-vertical) {
+  > nz-form-item {
+    background-color: @default-bg-color;
+    > nz-form-label {
+    }
   }
-
-  &.disabled label ::ng-deep span.label {
-    color: @text-color-secondary;
-  }
-
-  &.error label ::ng-deep span.label {
-    color: @error-color;
-  }
-
-  &.valid label ::ng-deep span.label {
-    color: @error-color;
+}
+// horizontal layout adjustments
+:host(.layout-horizontal) {
+  > nz-form-item {
+    > nz-form-label {
+    }
   }
 }
 
-.cvc-form-field-card() {
-  background-color: white;
-  border: 1px solid #d9d9d9;
-  padding: 4px 8px;
-  border-radius: 6px;
-  &.disabled {
-    border: 1px solid #f5f5f5;
-    background-color: #f5f5f5;
+// inline layout adjustments
+:host(.layout-inline) {
+  > nz-form-item {
+    > nz-form-label {
+    }
   }
 }
 
-.cvc-form-field-validation,
-.form-field-description {
-  // ensure consistent height of description, validation message line
-  min-height: 16px;
-  line-height: 1.2;
-  // font-size: 96%;
-  margin-top: 4px;
-  .extra-prompt {
-    font-weight: 400;
-  }
-  .extra-description {
-    font-style: oblique;
-  }
-}
+// :host-context(form[nzlayout='vertical']) {
+//   nz-form-item:first-of-type {
+//     flex-wrap: nowrap;
+//     flex-direction: column;
+//   }
+// }
 
-.cvc-form-field-validation {
-  font-weight: 600;
-}
+// :host-context(form[nzlayout='horizontal']) {
+//   nz-form-item:first-of-type {
+//     flex-direction: inherit;
+//     nz-form-label {
+//       text-align: right;
+//       line-height: 28px;
+//       white-space: inherit;
+//       padding: inherit;
+//     }
+//   }
+// }
 
-nz-form-item.layout-horizontal {
-  ::ng-deep nz-form-label:first-of-type {
-    .cvc-field-label();
-  }
-}
+// :host-context(form[nzlayout='inline']) {
+//   nz-form-item:first-of-type {
+//     flex-direction: inherit;
+//     nz-form-label {
+//       height: 28px;
+//       line-height: 28px;
+//       white-space: inherit;
+//       padding: inherit;
+//     }
+//   }
+// }
 
-nz-form-item.layout-vertical {
-  .cvc-form-field-card();
-  ::ng-deep nz-form-label:first-of-type {
-    .cvc-field-label();
-  }
+// .cvc-field-label() {
+//   label {
+//     // embolden required labels
+//     &.item-required {
+//       font-weight: 500;
 
-  margin-bottom: @margin-lg;
-}
+//       &:before {
+//         border: 1px solid @required-color;
+//         height: 1em;
+//         content: '';
+//       }
+//     }
+//   }
 
-nz-form-item.layout-inline {
-  ::ng-deep nz-form-label:first-of-type {
-    .cvc-field-label();
-    text-align: right;
-    margin-right: 6px;
-  }
-}
+//   ::ng-deep span.label {
+//     padding-right: 4px;
+//   }
+
+//   &.disabled label ::ng-deep span.label {
+//     color: @text-color-secondary;
+//   }
+
+//   &.error label ::ng-deep span.label {
+//     color: @error-color;
+//   }
+
+//   &.valid label ::ng-deep span.label {
+//     color: @error-color;
+//   }
+// }
+
+// .cvc-form-field-card() {
+//   background-color: white;
+//   border: 1px solid #d9d9d9;
+//   padding: 4px 8px;
+//   border-radius: 6px;
+//   &.disabled {
+//     border: 1px solid #f5f5f5;
+//     background-color: #f5f5f5;
+//   }
+// }
+
+// .cvc-form-field-validation,
+// .form-field-description {
+//   // ensure consistent height of description, validation message line
+//   min-height: 16px;
+//   line-height: 1.2;
+//   // font-size: 96%;
+//   margin-top: 4px;
+//   .extra-prompt {
+//     font-weight: 400;
+//   }
+//   .extra-description {
+//     font-style: oblique;
+//   }
+// }
+
+// .cvc-form-field-validation {
+//   font-weight: 600;
+// }
+
+// nz-form-item.layout-horizontal {
+//   ::ng-deep nz-form-label:first-of-type {
+//     .cvc-field-label();
+//   }
+// }
+
+// nz-form-item.layout-vertical {
+//   .cvc-form-field-card();
+//   ::ng-deep nz-form-label:first-of-type {
+//     .cvc-field-label();
+//   }
+
+//   margin-bottom: @margin-lg;
+// }
+
+// nz-form-item.layout-inline {
+//   ::ng-deep nz-form-label:first-of-type {
+//     .cvc-field-label();
+//     text-align: right;
+//     margin-right: 6px;
+//   }
+// }
