improved rating-select star visibility

--- a/client/src/app/forms/types/rating/rating.type.html
+++ b/client/src/app/forms/types/rating/rating.type.html
@@ -2,8 +2,11 @@
   type="hidden"
   [formControl]="formControl"
   [formlyAttributes]="field" />
-<nz-rate
-  [ngModel]="formControl.value"
-  [nzCount]="props.count"
-  [nzTooltips]="this.props.hoverText"
-  (ngModelChange)="rating$.next($event)"></nz-rate>
+
+<div class="rate-block">
+  <nz-rate
+    [ngModel]="formControl.value"
+    [nzCount]="props.count"
+    [nzTooltips]="this.props.hoverText"
+    (ngModelChange)="rating$.next($event)"></nz-rate>
+</div>
