--- a/client/src/app/forms/types/rating/rating.type.less
+++ b/client/src/app/forms/types/rating/rating.type.less
@@ -1,5 +1,10 @@
 :host {
-  ::ng-deep nz-rate ul {
+  .rate-block {
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 2px;
+    padding: 2px 4px;
+    margin-top: -4px;
   }
   ::ng-deep nz-rate .anticon {
     font-size: 160%;
