fix event-feed sidebar list title
"events && Action" -> "Action"

--- a/client/src/app/components/events/event-feed/event-feed.component.html
+++ b/client/src/app/components/events/event-feed/event-feed.component.html
@@ -73,7 +73,7 @@
           </span>
           <ng-container *nzSpaceItem>
             <cvc-participant-list
-              listTitle="events && Action"
+              listTitle="Action"
               [participantList]="(actions$ | ngrxPush) || []"
               (participantSelectedEvent)="onActionSelected($event)">
               <ng-template
