--- a/client/src/app/components/flags/flag-popover/flag-popover.component.html
+++ b/client/src/app/components/flags/flag-popover/flag-popover.component.html
@@ -72,7 +72,7 @@
           nzSize="small"
           nzLayout="vertical">
           <nz-descriptions-item nzTitle="Comment">
-            <cvc-comment-body [commentBodySegments]="f.openActivity.note"></cvc-comment-body>
+            <cvc-comment-body [commentBodySegments]="f.openActivity.parsedNote"></cvc-comment-body>
           </nz-descriptions-item>
         </nz-descriptions>
       </nz-space>
