'Edit Profile' -> 'View Profile' in viewer btn dropdown

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -137,7 +137,7 @@
             nz-menu-item
             nzMatchRouter
             [routerLink]="['/users', viewer.id]">
-            Edit Profile
+            View Profile
           </li>
           <li
             *ngIf="viewer.organizations.length > 1"
