fixed clinvar-input's options/model sync issues

--- a/client/src/app/forms/types/clinvar-input/clinvar-input.type.html
+++ b/client/src/app/forms/types/clinvar-input/clinvar-input.type.html
@@ -3,8 +3,8 @@
     nzSpan="24"
     *ngIf="props.showExistenceOptions">
     <nz-radio-group
-      [ngModel]="existenceOption$ | ngrxPush"
-      (ngModelChange)="existenceOption$.next($event)"
+      [ngModel]="existenceModel$ | ngrxPush"
+      (ngModelChange)="existenceChange$.next($event)"
       nzName="existence">
       <label
         *ngFor="let option of selectOptions"
