--- a/client/src/app/forms/types/level-select/level-select.type.html
+++ b/client/src/app/forms/types/level-select/level-select.type.html
@@ -2,7 +2,7 @@
   [cvcFormControl]="formControl"
   [cvcFormlyAttributes]="field"
   [cvcSelectMode]="props.isMultiSelect ? 'multiple' : 'default'"
-  [cvcPlaceholder]="placeholder$ | ngrxPush"
+  [cvcPlaceholder]="props.placeholder"
   [cvcCustomTemplate]="selectedTemplate"
   [cvcOptions]="selectOption$ | ngrxPush"
   [cvcShowError]="showError"
@@ -10,8 +10,8 @@
 <ng-container *ngFor="let enum of levelEnum$ | ngrxPush; index as i">
   <ng-template #optionTemplates>
     <nz-tag>
-      <strong>{{ enum }}</strong> -
-      {{ enum | enumTooltip: 'evidenceLevelBrief' }}
+      <strong>{{ enum }}</strong> - {{ enum | enumTooltip: 'evidenceLevelBrief'
+      }}
     </nz-tag>
   </ng-template>
 </ng-container>
@@ -24,11 +24,12 @@
       *ngIf="!props.isMultiSelect"
       nzMode="closeable"
       (nzOnClose)="onTagClose$.next($event)">
-      <strong>{{ selected.nzValue }}</strong> -
-      {{ selected.nzValue | enumTooltip: 'evidenceLevelBrief' }}
+      <strong>{{ selected.nzValue }}</strong> - {{ selected.nzValue |
+      enumTooltip: 'evidenceLevelBrief' }}
     </nz-tag>
     <ng-container *ngIf="props.isMultiSelect">
-      {{ selected.nzValue | enumTooltip: 'evidenceLevelBrief' }}
+      <strong>{{ selected.nzValue }}</strong> - {{ selected.nzValue |
+      enumTooltip: 'evidenceLevelBrief' }}
     </ng-container>
   </div>
 </ng-template>
