--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -123,7 +123,7 @@
           variant.deprecationReason | enumToTitle }}.
           <cvc-comment-body
             [commentBodySegments]="
-              variant.deprecationComment?.parsedComment || []
+              variant.deprecationActivity?.parsedNote || []
             "></cvc-comment-body>
         </ng-template>
         <cvc-tab-navigation [tabs]="this.tabs$ | ngrxPush">
