--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -148,6 +148,22 @@
                 [user]="
                   evidence.submissionEvent.originatingUser
                 "></cvc-user-tag>
+              <nz-tag
+                nz-popover
+                [nzPopoverContent]="submissionCommentTemplate"
+                [nzPopoverOverlayStyle]="{'width': '300px'}"
+                *ngIf="evidence.submissionActivity!.parsedNote.length > 0">
+                <i
+                  nz-icon
+                  nzType="align-left"></i>
+              </nz-tag>
+              <ng-template #submissionCommentTemplate>
+                <cvc-comment-body
+                  [commentBodySegments]="
+                    evidence.submissionActivity!.parsedNote
+                  ">
+                </cvc-comment-body>
+              </ng-template>
             </nz-descriptions-item>
             <ng-template #submittedTitle>
               Submitted
