Update source suggestion queue to pull initial comment from SuggestSourceActivity note

--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -236,14 +236,21 @@
           </td>
           <td
             nzAlign="center"
-            nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="!isScrolling ? suggestion.initialComment : ''">
+            nz-popover
+            [nzPopoverContent]="!isScrolling ? creationCommentTemplate : ''"
+            [nzPopoverOverlayStyle]="{'width': '300px'}">
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Comment' | entityColor"
               nzType="civic-comment"></i>
+            <ng-template #creationCommentTemplate>
+              <cvc-comment-body
+                [commentBodySegments]="
+                  suggestion.creationActivity!.parsedNote
+                ">
+              </cvc-comment-body>
+            </ng-template>
           </td>
           <td>
             <cvc-user-tag
