--- a/client/src/app/forms/types/base/input/input.type.html
+++ b/client/src/app/forms/types/base/input/input.type.html
@@ -3,9 +3,11 @@
   nz-input
   [formControl]="formControl"
   [type]="props.type || 'text'"
-  [formlyAttributes]="field" />
+  [formlyAttributes]="field"
+  (ngModelChange)="onValueChange$.next($event)" />
 <ng-template #numberTmp>
   <nz-input-number
     [formControl]="formControl"
-    [formlyAttributes]="field"></nz-input-number>
+    [formlyAttributes]="field"
+    (ngModelChange)="onValueChange$.next($event)"></nz-input-number>
 </ng-template>
