removed extranneous 'extraType' config options

--- a/client/src/app/forms/wrappers/form-field/form-field.wrapper.html
+++ b/client/src/app/forms/wrappers/form-field/form-field.wrapper.html
@@ -46,7 +46,7 @@
       </span>
       <span
         *ngSwitchDefault
-        [innerHTML]="props.description"></span>
+        [innerHTML]="props.prompt"></span>
     </ng-container>
   </div>
 </ng-template>
