display submission comment from activity note on comments pages

--- a/client/src/app/views/assertions/assertions-detail/assertions-comments/assertions-comments.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-comments/assertions-comments.page.html
@@ -1,1 +1,1 @@
-<cvc-comment-list [commentable]="commentable"></cvc-comment-list>
+<cvc-comment-list [creationComment]="submissionComment" [commentable]="commentable"></cvc-comment-list>
