--- a/client/src/app/views/evidence/evidence-detail/evidence-comments/evidence-comments.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-comments/evidence-comments.page.html
@@ -1,1 +1,1 @@
-<cvc-comment-list [commentable]="commentable"></cvc-comment-list>
+<cvc-comment-list [creationComment]="submissionComment" [commentable]="commentable"></cvc-comment-list>
