removed nz-form-item bottom margin in vert. layouts

--- a/client/src/app/forms/wrappers/form-field/form-field.wrapper.less
+++ b/client/src/app/forms/wrappers/form-field/form-field.wrapper.less
@@ -117,6 +117,7 @@
 // vertical layout fields displayed in a block w/ bg color & border styles
 :host(.layout-vertical) {
   > nz-form-item {
+    margin-bottom: 0; // margins set by parent field-grid or field-card wrappers
     background-color: @default-bg-color;
     border: @default-border;
     padding: @item-padding;
