--- a/client/src/app/forms/wrappers/form-card/form-card.wrapper.html
+++ b/client/src/app/forms/wrappers/form-card/form-card.wrapper.html
@@ -1,15 +1,13 @@
 <nz-card
   [nzTitle]="props.title"
   [nzExtra]="cardExtra">
-
-  <nz-row [nzGutter]="[6, 6]">
+  <nz-row [nzGutter]="props.gutter">
     <nz-col
       *ngFor="let field of field.fieldGroup"
       [nzSpan]="field.props?.colSpan || 12">
       <formly-field [field]="field"></formly-field>
     </nz-col>
   </nz-row>
-
 </nz-card>
 
 <ng-template #cardExtra> </ng-template>
