fixed source-select's extra padding-bottom issue

--- a/client/src/app/forms/types/source-select/source-select.type.html
+++ b/client/src/app/forms/types/source-select/source-select.type.html
@@ -1,4 +1,6 @@
-<nz-row [nzGutter]="[6, 6]">
+<nz-row
+  [nzGutter]="[6, 6]"
+  class="select-layout">
   <nz-col
     nzFlex="80px"
     *ngIf="showTypeSelect$ | ngrxPush">
