--- a/client/src/app/forms/wrappers/form-row/form-row.wrapper.html
+++ b/client/src/app/forms/wrappers/form-row/form-row.wrapper.html
@@ -1,55 +1,66 @@
-<nz-row
-  [nzGutter]="wrapperOptions.gutter ?? null"
-  class="form-row-wrapped">
-  <!-- handle responsive & indexed configured formGroups -->
-  <ng-container
-    *ngIf="wrapperOptions.colSpanIndexed
+<div [attr.style]="'margin-top: ' + topMargin">
+  <nz-row
+    [nzGutter]="wrapperOptions.gutter ?? null"
+    class="form-row-wrapped">
+    <!-- handle responsive & indexed configured formGroups -->
+    <ng-container
+      *ngIf="wrapperOptions.spanIndexed
     || wrapperOptions.responsive
     || wrapperOptions.responsiveIndexed; else defaultCol">
-    <!-- indexed colspan config -->
-    <ng-container *ngIf="wrapperOptions.colSpanIndexed">
-      <nz-col
-        *ngFor="let field of field.fieldGroup; index as i"
-        [nzSpan]="wrapperOptions.colSpanIndexed[i]">
-        <formly-field [field]="field"></formly-field>
-      </nz-col>
+      <!-- flex config -->
+      <ng-container *ngIf="wrapperOptions.flex">
+        <nz-col
+          *ngFor="let field of field.fieldGroup"
+          [nzFlex]="wrapperOptions.flex">
+          <formly-field [field]="field"></formly-field>
+        </nz-col>
+      </ng-container>
+
+      <!-- responsive config -->
+      <ng-container *ngIf="wrapperOptions.responsive">
+        <nz-col
+          *ngFor="let field of field.fieldGroup"
+          [nzXs]="wrapperOptions.responsive.xs ?? null"
+          [nzSm]="wrapperOptions.responsive.sm ?? null"
+          [nzMd]="wrapperOptions.responsive.md ?? null"
+          [nzLg]="wrapperOptions.responsive.lg ?? null"
+          [nzXl]="wrapperOptions.responsive.xl ?? null"
+          [nzXXl]="wrapperOptions.responsive.xxl ?? null">
+          <formly-field [field]="field"></formly-field>
+        </nz-col>
+      </ng-container>
+
+      <!-- indexed colspan config -->
+      <ng-container *ngIf="wrapperOptions.spanIndexed">
+        <nz-col
+          *ngFor="let field of field.fieldGroup; index as i"
+          [nzSpan]="wrapperOptions.spanIndexed[i]">
+          <formly-field [field]="field"></formly-field>
+        </nz-col>
+      </ng-container>
+
+      <!-- responsive, indexed config -->
+      <ng-container *ngIf="wrapperOptions.responsiveIndexed">
+        <nz-col
+          *ngFor="let field of field.fieldGroup; index as i"
+          [nzXs]="wrapperOptions.responsiveIndexed[i].xs ?? null"
+          [nzSm]="wrapperOptions.responsiveIndexed[i].sm ?? null"
+          [nzMd]="wrapperOptions.responsiveIndexed[i].md ?? null"
+          [nzLg]="wrapperOptions.responsiveIndexed[i].lg ?? null"
+          [nzXl]="wrapperOptions.responsiveIndexed[i].xl ?? null"
+          [nzXXl]="wrapperOptions.responsiveIndexed[i].xxl ?? null">
+          <formly-field [field]="field"></formly-field>
+        </nz-col>
+      </ng-container>
     </ng-container>
 
-    <!-- responsive config -->
-    <ng-container *ngIf="wrapperOptions.responsive">
+    <!-- default config: single span for every field-->
+    <ng-template #defaultCol>
       <nz-col
-        *ngFor="let field of field.fieldGroup; index as i"
-        [nzXs]="wrapperOptions.responsive.xs ?? null"
-        [nzSm]="wrapperOptions.responsive.sm ?? null"
-        [nzMd]="wrapperOptions.responsive.md ?? null"
-        [nzLg]="wrapperOptions.responsive.lg ?? null"
-        [nzXl]="wrapperOptions.responsive.xl ?? null"
-        [nzXXl]="wrapperOptions.responsive.xxl ?? null">
+        *ngFor="let field of field.fieldGroup"
+        [nzSpan]="wrapperOptions.span ?? null">
         <formly-field [field]="field"></formly-field>
       </nz-col>
-    </ng-container>
-
-    <!-- responsive, indexed config -->
-    <ng-container *ngIf="wrapperOptions.responsiveIndexed">
-      <nz-col
-        *ngFor="let field of field.fieldGroup; index as i"
-        [nzXs]="wrapperOptions.responsiveIndexed[i].xs ?? null"
-        [nzSm]="wrapperOptions.responsiveIndexed[i].sm ?? null"
-        [nzMd]="wrapperOptions.responsiveIndexed[i].md ?? null"
-        [nzLg]="wrapperOptions.responsiveIndexed[i].lg ?? null"
-        [nzXl]="wrapperOptions.responsiveIndexed[i].xl ?? null"
-        [nzXXl]="wrapperOptions.responsiveIndexed[i].xxl ?? null">
-        <formly-field [field]="field"></formly-field>
-      </nz-col>
-    </ng-container>
-  </ng-container>
-
-  <!-- default config: single colSpan for every field-->
-  <ng-template #defaultCol>
-    <nz-col
-      *ngFor="let field of field.fieldGroup"
-      [nzSpan]="wrapperOptions.colSpan ?? null">
-      <formly-field [field]="field"></formly-field>
-    </nz-col>
-  </ng-template>
-</nz-row>
+    </ng-template>
+  </nz-row>
+</div>
