Fix molecular profile browse table formatting issue

--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -227,7 +227,7 @@
             </cvc-tag-overflow>
           </td>
           <td
-            nzRigh
+            nzRight
             nzAlign="right">
             {{ mp.molecularProfileScore | number }}
           </td>
