added align prop to org-submit-btn to control left/right/center positioning

--- a/client/src/app/forms/types/org-submit-button/org-submit-button.type.html
+++ b/client/src/app/forms/types/org-submit-button/org-submit-button.type.html
@@ -4,16 +4,24 @@
   [formControl]="formControl"
   [formlyAttributes]="field" />
 
-<button
-  *ngrxLet="mostRecentOrg$ as organization"
-  cvcOrgSubmitButton
-  type="submit"
-  nz-button
-  [disabled]="!form.valid"
-  [nzDanger]=""
-  nzType="primary"
-  nz-tooltip
-  [nzTooltipTrigger]="organization ? 'hover' : null"
-  [nzTooltipTitle]="'For ' + organization?.name">
-  {{ props.submitLabel }}
-</button>
+<div
+  class="btn-aligner"
+  [ngClass]="{
+  'btn-right': props.align === 'right',
+  'btn-left': props.align === 'left',
+  'btn-center': props.align === 'center',
+  }">
+  <button
+    *ngrxLet="mostRecentOrg$ as organization"
+    cvcOrgSubmitButton
+    type="submit"
+    nz-button
+    [disabled]="!form.valid"
+    [nzDanger]=""
+    nzType="primary"
+    nz-tooltip
+    [nzTooltipTrigger]="organization ? 'hover' : null"
+    [nzTooltipTitle]="'For ' + organization?.name">
+    {{ props.submitLabel }}
+  </button>
+</div>
