updated forms w/ form-row layout, better responsive display

--- a/client/src/app/forms/test-pages/variantgroup-revise-test/variantgroup-revise-test.page.html
+++ b/client/src/app/forms/test-pages/variantgroup-revise-test/variantgroup-revise-test.page.html
@@ -1,1 +1,2 @@
-<cvc-variantgroup-revise-form></cvc-variantgroup-revise-form>
+<cvc-variantgroup-revise-form
+  [variantGroupId]="24"></cvc-variantgroup-revise-form>
