--- a/client/src/app/forms/types/molecular-profile-select/molecular-profile-select.type.less
+++ b/client/src/app/forms/types/molecular-profile-select/molecular-profile-select.type.less
@@ -26,7 +26,10 @@ form,
   .limit-select-width {
     // using inline-block will cause its child select element to shrink to fit
     // its contents, otherwise users might click in the empty area of the select
-    // and display a confusing dropdown which we should probably try to hide.
+    // and display a confusing dropdown which we should ideally suppress.
     display: inline-block;
+    // adjustments to get select bg height same as Editor button
+    margin-top: -1px;
+    margin-bottom: -1px;
   }
 }
